<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/new_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_student" />

    <TextView
        android:id="@+id/student_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name_title" />
    <TextView
        android:id="@+id/student_name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/student_last_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_last_name_title" />
    <TextView
        android:id="@+id/student_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    <TextView
        android:id="@+id/student_fame_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_fame_title" />

    <TextView
        android:id="@+id/student_fame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/student_picture_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_picture_title" />

    <TextView
        android:id="@+id/student_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/student_categorias_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_category_title" />

</LinearLayout>