<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"
        android:textSize="17dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/student_name_title"
       />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15dp"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="17dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFF"
        android:text="@string/student_last_name_title"
        />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15dp"
        android:imeOptions="actionDone"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="17dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFF"
        android:text="@string/student_fame_title"
        />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/radio_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:textColor="#FFF"
                android:text="@string/student_male_value"
                android:textSize="17dp"
               />
            <RadioButton android:id="@+id/radio_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:text="@string/student_female_value"
                android:textSize="17dp"
                />
        </RadioGroup>


    <TextView
        android:id="@+id/tv_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="17dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#FFF"
        android:text="@string/student_pictogram_size_title"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radio_size_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="#FFF"
            android:text="@string/pictogram_size_small"
            android:imeOptions="actionDone"
            android:textSize="17dp"
            />
        <RadioButton android:id="@+id/radio_size_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textColor="#FFF"
            android:text="@string/pictogram_size_medium"
            android:imeOptions="actionDone"
            android:textSize="17dp"
            />
        <RadioButton android:id="@+id/radio_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="@string/pictogram_size_big"
            android:imeOptions="actionDone"
            android:textSize="17dp"
            />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="100px"
            android:layout_height="50px"
            android:text="@string/button_save"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:textColor="#FFF"
            android:background="@drawable/button_selector"
            />

        <Button
            android:id="@+id/dialogButtonCancel"
            android:layout_width="100px"
            android:layout_height="50px"
            android:text="@string/button_cancel"
            android:layout_gravity="center"
            android:textColor="#FFF"
            android:background="@drawable/button_selector"
            />

    </LinearLayout>

</LinearLayout>