<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_configuration" />

    <TextView
        android:id="@+id/configuration_ip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuration_ip_title" />
    <TextView
        android:id="@+id/configuration_ip_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/configuration_port_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuration_port_title" />
    <TextView
        android:id="@+id/configuration_port_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>